--- a/app/src/main/res/layout/activity_confirm.xml
+++ b/app/src/main/res/layout/activity_confirm.xml
@@ -1,38 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/activity_transfer"
+    android:id="@+id/activity_confirm"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:gravity="center"
+    android:orientation="vertical"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:gravity="center"
-    android:orientation="vertical"
-    tools:context="com.example.rockroku.somkiatbankmobilebanking.TransferActivity">
+    tools:context="com.example.rockroku.somkiatbankmobilebanking.ConfirmActivity">
 
-
-    <LinearLayout
+    <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
-
-        <TextView
-            android:id="@+id/tv_account_type_label"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="To ประเภท: " />
-
-        <TextView
-            android:id="@+id/tv_account_type"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="3dp"
-            android:text="ออมทรัพย์" />
-    </LinearLayout>
-
-
+        android:text="Confirm?" />
 
     <LinearLayout
         android:layout_width="wrap_content"
@@ -99,11 +82,64 @@
             android:text="บาท" />
     </LinearLayout>
 
-    <Button
-        android:id="@+id/bt_transfer_transfer_activity"
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="โอน"/>
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/tv_transfer_fee_label"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="ค่าธรรมเนียม: " />
+
+        <TextView
+            android:id="@+id/tv_transfer_fee"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="3dp"
+            android:text="0.00" />
+
+        <TextView
+            android:id="@+id/tv_transfer_fee_unit_label"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="3dp"
+            android:text="บาท" />
+    </LinearLayout>
+
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/tv_balance_label"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="เงินคงเหลือ: " />
+
+        <TextView
+            android:id="@+id/tv_balance"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="3dp"
+            android:text="180,000" />
+
+        <TextView
+            android:id="@+id/tv_balance_unit_label"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="3dp"
+            android:text="บาท" />
+    </LinearLayout>
+
+    <Button
+        android:id="@+id/btn_confirm"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="ยืนยัน" />
 
 
 </LinearLayout>
