--- a/app/src/main/res/layout/activity_transfer.xml
+++ b/app/src/main/res/layout/activity_transfer.xml
@@ -4,12 +4,12 @@
     android:id="@+id/activity_transfer"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:gravity="center"
+    android:orientation="vertical"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:gravity="center"
-    android:orientation="vertical"
     tools:context="com.example.rockroku.somkiatbankmobilebanking.TransferActivity">
 
 
@@ -33,7 +33,6 @@
     </LinearLayout>
 
 
-
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -44,6 +43,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="ชื่อบัญชี: " />
+
 
         <TextView
             android:id="@+id/tv_account_name"
@@ -65,6 +65,7 @@
             android:layout_height="wrap_content"
             android:text="เลขที่บัญชี: " />
 
+
         <TextView
             android:id="@+id/tv_account_no"
             android:layout_width="wrap_content"
@@ -84,11 +85,12 @@
             android:layout_height="wrap_content"
             android:text="จำนวนเงินโอน: " />
 
-        <TextView
+        <EditText
             android:id="@+id/tv_transfer_amount"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="3dp"
+            android:ems="10"
             android:text="20,000" />
 
         <TextView
@@ -103,7 +105,7 @@
         android:id="@+id/bt_transfer_transfer_activity"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="โอน"/>
+        android:text="โอน" />
 
 
 </LinearLayout>
